--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "license": "MIT",
   "devDependencies": {
     "browser-sync": "^2.10.0",
-    "gulp": "^3.9.0",
+    "gulp": "^3.9.1",
     "gulp-plumber": "~0.6.5",
-    "gulp-util": "^3.0.7",
-    "gulp-uglify": "^3.0.0"
+    "gulp-uglify": "^3.0.0",
+    "gulp-util": "^3.0.7"
   }
 }
