--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "browser-sync": "^2.10.0",
     "gulp": "^3.9.1",
     "gulp-plumber": "~0.6.5",
+    "gulp-sass": "^3.1.0",
     "gulp-uglify": "^3.0.0",
     "gulp-util": "^3.0.7"
   }
